<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/mustard"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_password"
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="80dp"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            app:cardElevation="50dp"
            android:layout_marginBottom="20dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            app:cardElevation="50dp"
            android:layout_marginBottom="20dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="50dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLinkEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/link"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnEditData"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:backgroundTint="@color/black"
            android:layout_marginTop="25dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>