<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mustard"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/profile"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            app:cardElevation="50dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cardElevation="50dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="150dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>