<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mustard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_your_account"
                android:gravity="center"
                android:background="@color/black"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/profile"
            />


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           >
           <androidx.cardview.widget.CardView
               android:layout_width="340dp"
               android:layout_gravity="center"
               android:layout_height="60dp"
               app:cardElevation="50dp"
               android:layout_marginBottom="10dp"

               >

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="330dp"
                   android:layout_gravity="center"
                   android:layout_marginBottom="2dp"
                   android:layout_height="wrap_content"
                   >
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/etNameSign"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:hint="@string/username"
                       />
               </com.google.android.material.textfield.TextInputLayout>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="340dp"
               android:layout_gravity="center"
               android:layout_height="60dp"
               app:cardElevation="50dp"
               android:layout_marginBottom="10dp"

               >

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="330dp"
                   android:layout_gravity="center"
                   android:layout_marginBottom="2dp"
                   android:layout_height="wrap_content"
                   >
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/etPassSign"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:inputType="textPassword"
                       android:hint="@string/password"
                       />
               </com.google.android.material.textfield.TextInputLayout>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="340dp"
               android:layout_gravity="center"
               android:layout_height="60dp"
               app:cardElevation="50dp"
               android:layout_marginBottom="10dp"

               >

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="330dp"
                   android:layout_gravity="center"
                   android:layout_marginBottom="2dp"
                   android:layout_height="wrap_content"
                   >
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/etRepassSign"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:hint="@string/re_enter_password"
                       android:inputType="textPassword"
                       />
               </com.google.android.material.textfield.TextInputLayout>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="340dp"
               android:layout_gravity="center"
               android:layout_height="60dp"
               app:cardElevation="50dp"
               android:layout_marginBottom="10dp"

               >

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="330dp"
                   android:layout_gravity="center"
                   android:layout_marginBottom="2dp"
                   android:layout_height="wrap_content"
                   >
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/etEmailSign"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:inputType="textEmailAddress"
                       android:hint="@string/email"
                       />
               </com.google.android.material.textfield.TextInputLayout>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="340dp"
               android:layout_gravity="center"
               android:layout_height="60dp"
               app:cardElevation="50dp"
               android:layout_marginBottom="10dp"

               >

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="330dp"
                   android:layout_gravity="center"
                   android:layout_marginBottom="2dp"
                   android:layout_height="wrap_content"
                   >
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/etPhoneSign"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:inputType="phone"
                       android:hint="@string/phone_no"
                       />
               </com.google.android.material.textfield.TextInputLayout>
           </androidx.cardview.widget.CardView>

           <Button
               android:id="@+id/btnSign"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:text="@string/sign_up"
               android:textColor="@color/white"
               android:textSize="15sp"
               android:layout_gravity="center"
               android:padding="5dp"
               android:backgroundTint="@color/black"
               android:layout_marginTop="25dp"
               />
       </LinearLayout>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>